Changelog
=========


1.1.2 (unreleased)
------------------

- Fix tests to be compatible with most recent ftw.testbrowser. [lgraf]


1.1.1 (2017-02-03)
------------------

- Avoid caching maintenance server responses. [jone]


1.1.0 (2016-03-12)
------------------

- Allow setting a different listening address as optional parameter. Default is still localhost. pass an empty string to listen to all addresses on a host.
  [fredvd]


1.0.2 (2015-01-21)
------------------

- Fix broken pipe error when connections are closed early by the client.
  [jone]


1.0.1 (2014-03-21)
------------------

- Ignore virtualHostMonster configuartions in paths.
  [jone]


1.0.0 (2014-03-21)
------------------

- Initial implementation.
  [jone]